--- a/display/style.css
+++ b/display/style.css
@@ -82,11 +82,17 @@ p {
 a {
     color: #396BA7;
     text-decoration: none;
+    transition: all .2s;
 }
 
 a:visited {
     color: #800035;
 }
+
+a:hover {
+    color: #184273;
+}
+
 
 .hint {
     font-size: .85em;
@@ -96,7 +102,12 @@ a:visited {
 .icon-down {
     width: 2em;
     height: 2em;
-    fill: #57A76A;
+    fill: #777777;
+}
+
+.icon-up:hover,
+.icon-down:hover {
+    fill: #396BA7;
 }
 
 .up,
