--- a/display/style.css
+++ b/display/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Tahoma, arial, sans-serif;
-    padding: 2em;
+    padding: 2em 0;
     background: #eee;
     color: #333;
 }
@@ -23,8 +23,8 @@ h1,h2,h3,h4,h5,h6 {
 .site-data {
     background: #fff;
     border-bottom: 2px solid #ccc;
-    padding: 2.6em 2em 3.6em;
-    margin-bottom: 3em;
+    padding: 1.6em 1em 1.6em;
+    margin-bottom: 2em;
 }
 
 table {
@@ -132,4 +132,15 @@ a:hover {
 
 .integer .order-wrap {
     left: 0;
+}
+
+@media screen and (min-width: 30em) {
+    body {
+        padding: 2em;
+    }
+
+    .site-data {
+        padding: 2.6em 2em 3.6em;
+        margin-bottom: 3em;
+    }
 }
